--- a/pom.xml
+++ b/pom.xml
@@ -38,19 +38,34 @@
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
         </dependency>
-        
+
         <!-- Spring Mail for email sending (Jakarta Mail) -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
-        
-        <!-- JavaMail API for ConnectToDatabase.java -->
+
+        <dependency>
+            <groupId>jakarta.mail</groupId>
+            <artifactId>jakarta.mail-api</artifactId>
+            <version>2.1.2</version> <!-- Or the latest stable version -->
+        </dependency>
         <dependency>
             <groupId>com.sun.mail</groupId>
-            <artifactId>javax.mail</artifactId>
-            <version>1.6.2</version>
+            <artifactId>jakarta.mail</artifactId>
+            <version>2.1.2</version> <!-- Or the latest stable version -->
         </dependency>
+        <dependency>
+            <groupId>jakarta.activation</groupId>
+            <artifactId>jakarta.activation-api</artifactId>
+            <version>2.1.2</version> <!-- Or the latest stable version -->
+        </dependency>
+        <dependency>
+            <groupId>com.sun.activation</groupId>
+            <artifactId>jakarta.activation</artifactId>
+            <version>2.1.2</version> <!-- Or the latest stable version -->
+        </dependency>
+        
         
         <!-- Spring Security for BCrypt password hashing -->
         <dependency>
